--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -1,20 +1,16 @@
-﻿@charset "UTF-8";
+@charset "UTF-8";
 
 body {
-  background-image: url("0.JPG");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
   margin: 0;
   padding: 0;
+  background-color: #000;
 }
 
 /*****************************************
   *----------------------------------
-  |  ThisStyleVersion: 10.6       |
+  |  ThisStyleVersion: 11.0       |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-02-16       |
+  |  LastUpdate: 2023-02-19       |
   |  ・。・ﾌﾟｼｭｰ㌨？・・・。      |
 ----------------------------------*
 ******************************************/
@@ -22,20 +18,22 @@ body {
 /* 色、模様、サイズ、調整部
 ----------------------------------------------------*/
 
-h1 {color: #0000ff; }
-//h2 {color: #00ffff; }
-h3 {color: #00aaff; }
-h4 {color: #0fffff; }
-p  {color: #ffffff; }
-th {color: #00ff00; }
-td {color: #00ff00; }
-li {color: #FFFFFF; }
+h1 {color: #ff00ff;}
+//h2 {color: #ffffff;}
+h3 {color: #fff000;}
+h4 {color: #0fffff;}
+p  {color: #ffffff;}
+th {color: #00ff00;}
+td {color: #00ff00;}
+li {color: #FFFFFF;}
 
 button {
   border-radius: 5px;
   padding: 5px;
   color: #000;
   background: #00d5ff;
+  transition: background 0.3s;
+  transition: color 0.3s;
 }
 button:hover {
   color: #fff;
@@ -43,7 +41,7 @@ button:hover {
 }
 
 a {
-  color: #fff000;
+  color: #4000ff;
 }
 a:hover {
   color: #ff5500;
@@ -211,24 +209,32 @@ td {
   padding: 5px;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+}
+
 .left {
   display: flex;
-  aligin-items: left;
   justify-content: left;
-  flex-wrap: wrap;
 }
 
 .right {
   display: flex;
-  aligin-items: right;
   justify-content: right;
-  flex-wrap: wrap;
 }
 
-.center {
+.avater {
   display: flex;
-  flex-wrap: wrap;
-  aligin-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+.avater_image {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
   justify-content: center;
 }
 
@@ -250,7 +256,7 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 120px;
+  font-size: 75px;
   color: #fff;
   font-weight: bold;
   display: block;
@@ -270,6 +276,8 @@ section {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  /* video filtre */
+  filter: blur(8px);
 }
 .show img {
   /* Make image to at least 100% wide and tall */
@@ -284,6 +292,8 @@ section {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  /* image filtre */
+  filter: blur(10px);
 }
 
 /* ヘッダー調整部
@@ -358,6 +368,7 @@ section {
   height: 200px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* 親要素周りの余白
@@ -395,6 +406,17 @@ section {
   height: 100%;
 }
 
+/* プロフィール調整部 
+----------------------------------------------------*/
+
+.profile {
+  background-color: #0099cc;
+  width: 50vw;
+  padding: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
 /* フォーム調整部
 ----------------------------------------------------*/
 
@@ -415,6 +437,10 @@ section {
 
 .form_yohaku {
   margin: 10px;
+}
+
+.form_error {
+  color: #ff0000;
 }
 
 textarea {
@@ -478,6 +504,7 @@ textarea {
   padding: 0 10px;
   width: 23vw;
   height: auto;
+  margin-bottom: 15px;
 }
 
 .blog_card_link {
@@ -525,27 +552,6 @@ textarea {
 
 .blog_card_description {
   margin: 0;
-}
-
-.blog_avator {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: start;
-  padding: 10px;
-}
-
-.blog_avator_name {
-  font-weight: bold;
-  padding-left: 15px;
-}
-
-.blog_avator_image {
-  width: 50px;
-  height: 50px;
-  margin: 0;
-  border-radius: 50%;
-  overflow: hidden;
 }
 
 /* Flex box調整部
@@ -909,6 +915,13 @@ ul li a {
   margin: auto;
 }
 
+/* プロフィール調整部 
+----------------------------------------------------*/
+
+.profile {
+  width: 80vw;
+}
+
 /* sm tb版 サービス調整部
 ----------------------------------------------------*/
 
@@ -946,7 +959,7 @@ ul li a {
   border: solid 2px #fff;
   border-radius: 5px;
   overflow: hidden;
-  width: 50vw;
+  width: 60vw;
   height: 30vh;
 }
 .photo_box-2 {
@@ -955,7 +968,7 @@ ul li a {
   border: solid 2px #0fffff;
   border-radius: 5px;
   overflow: hidden;
-  width: 50vw;
+  width: 60vw;
   height: 30vh;
 }
 
