--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
 
 body {
+  background-image: url("0.JPG");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   margin: 0;
   padding: 0;
-  background-color: #000;
 }
 
 /*****************************************
@@ -42,6 +46,7 @@ button:hover {
 
 a {
   color: #4000ff;
+  transition: color 0.3s;
 }
 a:hover {
   color: #ff5500;
