--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -12,9 +12,9 @@ body {
 
 /*****************************************
   *----------------------------------
-  |  ThisStyleVersion: 11.1       |
+  |  ThisStyleVersion: 11.3       |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-02-22       |
+  |  LastUpdate: 2023-02-27       |
   |  ・。・ﾌﾟｼｭｰ㌨？・・・。      |
 ----------------------------------*
 ******************************************/
@@ -26,10 +26,10 @@ h1 {color: #7fffd4;}
 //h2 {color: #ffffff;}
 h3 {color: #fff000;}
 h4 {color: #0fffff;}
-p  {color: #ffffff;}
+p  {color: #000000;}
 th {color: #00ff00;}
 td {color: #00ff00;}
-li {color: #FFFFFF;}
+li {color: #000000;}
 
 button {
   border-radius: 5px;
@@ -121,87 +121,87 @@ color:#e6e6e6; margin: auto;
 }
 @keyframes flash {
   0%,33%,66%,100%{
-    opacity: 0;
+  opacity: 0;
 }
-  12%{
-color:#ff5353;
-opacity: 1;
+12%{
+  color:#ff5353;
+  opacity: 1;
 }
-  24%{
-color:#ffcf53;
-opacity: 1;
+24%{
+  color:#ffcf53;
+  opacity: 1;
 }
-  36%{
-color:#e8ff53;
-opacity: 1;
+36%{
+  color:#e8ff53;
+  opacity: 1;
 }
-  48%{
-color:#53ff5d;
-opacity: 1;
+48%{
+  color:#53ff5d;
+  opacity: 1;
 }
-  60%{
-color:#53ffbc;
-opacity: 1;
+60%{
+  color:#53ffbc;
+  opacity: 1;
 }
-  72%{
-color:#5393ff;
-opacity: 1;
+72%{
+  color:#5393ff;
+  opacity: 1;
 }
   84%{
 color:#ca53ff;
 opacity: 1;
 }
-  100%{
-color:#ff53bd;
-opacity: 1;
+100%{
+  color:#ff53bd;
+  opacity: 1;
 }
 }
 @-webkit-keyframes flash {
   0%,33%,66%,100%{
-    opacity: 0;
+  opacity: 0;
 }
-  12%{
-color:#ff5353;
-opacity: 1;
+12%{
+  color:#ff5353;
+  opacity: 1;
 }
-  24%{
-color:#ffcf53;
-opacity: 1;
+24%{
+  color:#ffcf53;
+  opacity: 1;
 }
-  36%{
-color:#e8ff53;
-opacity: 1;
+36%{
+  color:#e8ff53;
+  opacity: 1;
 }
-  48%{
-color:#53ff5d;
-opacity: 1;
+48%{
+  color:#53ff5d;
+  opacity: 1;
 }
-  60%{
-color:#53ffbc;
-opacity: 1;
+60%{
+  color:#53ffbc;
+  opacity: 1;
 }
-  72%{
-color:#5393ff;
-opacity: 1;
+72%{
+  color:#5393ff;
+  opacity: 1;
 }
   84%{
 color:#ca53ff;
 opacity: 1;
 }
-  100%{
-color:#ff53bd;
-opacity: 1;
+100%{
+  color:#ff53bd;
+  opacity: 1;
 }
 }
 
 table {
   border-collapse: collapse;
   border-spacing: 0;
-  border: 1px solid #fff;
+  border: 1px solid #ccc;
 }
 
 th {
-  border: 1px solid #fff;
+  border: 1px solid #ccc;
   padding: 5px;
 }
 
@@ -210,7 +210,7 @@ tr {
 }
 
 td {
-  border: 1px solid #fff;
+  border: 1px solid #ccc;
   padding: 5px;
 }
 
@@ -255,6 +255,7 @@ section {
   position: relative;
   overflow: hidden;
 }
+
 .show > strong {
   position: absolute;
   z-index: 3;
@@ -268,6 +269,72 @@ section {
   width: 100%;
   text-align: center;
 }
+
+.show > .scroll {
+  font-family: "Century Gothic","Lato",sans-serif;
+  font-weight: 900;position:absolute;
+  bottom: 120px;
+  left: 50%;
+  z-index: 3;
+  width: 60px;
+  margin-left: -30px;
+  padding-bottom: 40px;
+  color: #00ff00;
+  font-size: 11px;
+  text-align: center
+}
+
+.show > .scroll .arw {
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  left:50%; bottom:0;width:9px;
+  height:30px; background:url(./scroll.svg) no-repeat center center
+}
+
+.show > .scroll .arw:after {
+  -moz-animation: scroll 1s linear 0s infinite normal;
+  -webkit-animation: scroll 1s linear 0s infinite normal;
+  animation: scroll 1s linear 0s infinite normal;
+  content: '';display:block;
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 1px;
+  height: 5px;
+  background: #00ff00;
+}
+
+@-webkit-keyframes scroll{
+  0%{top:-5px}
+  75%{top:-5px}
+  100%{top:30px}
+}
+
+@-moz-keyframes scroll{
+  0%{top:-5px}
+  75%{top:-5px}
+  100%{top:30px}
+}
+
+@-o-keyframes scroll{
+  0%{top:-5px}
+  75%{top:-5px}
+  100%{top:30px}
+}
+
+@-ms-keyframes scroll{
+  0%{top:-5px}
+  75%{top:-5px}
+  100%{top:30px}
+}
+
+@keyframes scroll{
+  0%{top:-5px}
+  75%{top:-5px}
+  100%{top:30px}
+}
+
 .show video {
   /* Make video to at least 100% wide and tall */
   min-width: 100vw;
@@ -284,6 +351,7 @@ section {
   /* video filtre */
   filter: blur(8px);
 }
+
 .show img {
   /* Make image to at least 100% wide and tall */
   min-width: 100vw;
@@ -351,7 +419,7 @@ section {
   //margin-top: 0px;
   //margin-left: 150px;
   //margin-right: 150px;
-  background-color: #000000;
+  background-color: #ffffff;
   //-webkit-backdrop-filter: blur(20px);
   //backdrop-filter: blur(20px);
   height: auto;
@@ -677,8 +745,8 @@ textarea {
 
 .photo_box-1 {
   background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 5px 20px rgba(225, 255, 255, 0.8);
-  border: solid 2px #fff;
+  box-shadow: 0 5px 20px rgba(50, 255, 255, 0.8);
+  border: solid 2px #000fff;
   border-radius: 5px;
   overflow: hidden;
   width: 40vw;
@@ -732,7 +800,7 @@ ul li:hover {
 
 .menu-btn {
   position: fixed;
-  bottom: 7px;
+  top: 7px;
   right: 7px;
   display: none;
   height: 60px;
@@ -805,7 +873,7 @@ ul li:hover {
 
 .menu-btn {
   position: fixed;
-  bottom: 13px;
+  top: 13px;
   right: 13px;
   display: flex;
   height: 60px;
@@ -868,13 +936,27 @@ ul li:hover {
   top: 16px;
 }
 
+/* 色、模様、サイズ、調整部
+----------------------------------------------------*/
+
+h1 {color: #7fffd4;}
+//h2 {color: #ffffff;}
+h3 {color: #fff000;}
+h4 {color: #0fffff;}
+p  {color: #ffffff;}
+th {color: #00ff00;}
+td {color: #00ff00;}
+li {color: #FFFFFF;}
+
 /* sm tb版 SHOW調整部
 ----------------------------------------------------*/
 
 .show > strong {
-    font-size: 30px;
-    color: #fff;
-    font-weight: bold;
+  display: none;
+}
+
+.show > .scroll {
+  bottom: 50px;
 }
 
 /* sm tb版 ナビゲーションバー調整部
@@ -886,8 +968,24 @@ ul li {
 
 ul li a {
   margin: 2px;
-  font-size: 8px;
+  font-size: 10px;
   width: 100%;
+}
+
+/* ヘッダー調整部
+----------------------------------------------------*/
+
+.header {
+  position: fixed;
+  height: 75px;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  background-color: rgba(255,255,255,0.6);
+  box-shadow: 0 5px 20px rgba(100, 255, 255, 0.8);
+  border-radius:15px;
+  overflow: hidden;
+  z-index: 999;
 }
 
 /* sm tb版 メイン調整部
@@ -908,7 +1006,7 @@ ul li a {
 .footer {
   //margin-left: 5%;
   //margin-right: 5%;
-  margin-bottom: 85px;
+  margin-bottom: 0;
   background-color: #333333;
   height: 200px;
   display: flex;
