--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -24,7 +24,7 @@ body {
 
 h1 {color: #7fffd4;}
 //h2 {color: #ffffff;}
-h3 {color: #fff000;}
+h3 {color: #36b336;}
 h4 {color: #0fffff;}
 p  {color: #000000;}
 th {color: #00ff00;}
@@ -780,7 +780,7 @@ ul li {
 ul li a {
   display: block;
   text-decoration: none;
-  color: #cccccc;
+  color: #fff000;
 }
 
 ul li.current{
@@ -941,7 +941,7 @@ ul li:hover {
 
 h1 {color: #7fffd4;}
 //h2 {color: #ffffff;}
-h3 {color: #fff000;}
+h3 {color: #36b336;}
 h4 {color: #0fffff;}
 p  {color: #ffffff;}
 th {color: #00ff00;}
