--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -12,9 +12,9 @@ body {
 
 /*****************************************
   *----------------------------------
-  |  ThisStyleVersion: 11.3       |
+  |  ThisStyleVersion: 11.4       |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-02-27       |
+  |  LastUpdate: 2023-02-28       |
   |  ・。・ﾌﾟｼｭｰ㌨？・・・。      |
 ----------------------------------*
 ******************************************/
@@ -24,7 +24,7 @@ body {
 
 h1 {color: #7fffd4;}
 //h2 {color: #ffffff;}
-h3 {color: #36b336;}
+h3 {color: #158000;}
 h4 {color: #0fffff;}
 p  {color: #000000;}
 th {color: #00ff00;}
@@ -244,7 +244,7 @@ td {
 }
 
 section {
-  margin:10px;
+  padding:10px;
 }
 
 /* SHOW調整部 
@@ -745,21 +745,47 @@ textarea {
 
 .photo_box-1 {
   background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 5px 20px rgba(50, 255, 255, 0.8);
-  border: solid 2px #000fff;
+  box-shadow: 0 5px 20px rgba(100, 0, 100, 0.8);
+  border: solid 2px #ff5500;
   border-radius: 5px;
   overflow: hidden;
-  width: 40vw;
-  height: 50vh;
+  width: 21vw;
+  height: 24vh;
 }
+
 .photo_box-2 {
   background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 5px 20px rgba(100, 255, 255, 0.8);
-  border: solid 2px #0fffff;
+  border: solid 2px #b3ffff;
   border-radius: 5px;
   overflow: hidden;
-  width: 40vw;
-  height: 50vh;
+  width: 21vw;
+  height: 24vh;
+}
+
+.photo_box_no_dodai-1 {
+  padding: 0.5em 1em;
+  margin: 10px;
+  border-radius: 10px;
+  background-color: #3dcccc;
+  width: 22vw;
+}
+
+.photo_box_no_dodai-2 {
+  padding: 0.5em 1em;
+  margin: 10px;
+  border-radius: 10px;
+  background-color: #ff4d4d;
+  width: 22vw;
+}
+
+.photo_box_message {
+  height: 300px;
+}
+
+.photo_box_yokoori {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* ナビゲーションバー調整部
@@ -941,7 +967,7 @@ ul li:hover {
 
 h1 {color: #7fffd4;}
 //h2 {color: #ffffff;}
-h3 {color: #36b336;}
+h3 {color: #158000;}
 h4 {color: #0fffff;}
 p  {color: #ffffff;}
 th {color: #00ff00;}
@@ -1071,6 +1097,7 @@ ul li a {
   width: 60vw;
   height: 30vh;
 }
+
 .photo_box-2 {
   background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 5px 20px rgba(100, 255, 255, 0.8);
@@ -1079,6 +1106,20 @@ ul li a {
   overflow: hidden;
   width: 60vw;
   height: 30vh;
+}
+
+.photo_box_no_dodai-1 {
+  border-radius: 10px;
+  margin: 0;
+  margin-bottom: 15px;
+  width: 80vw;
+}
+
+.photo_box_no_dodai-2 {
+  border-radius: 10px;
+  margin: 0;
+  margin-bottom: 15px;
+  width: 80vw;
 }
 
 /* sm tb版 画像AUTOリサイズ
