--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -12,15 +12,15 @@ body {
 
 /*****************************************
   *----------------------------------
-  |  ThisStyleVersion: 11.4       |
+  |  ThisStyleVersion: 11.5       |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-02-28       |
+  |  LastUpdate: 2023-03-01       |
   |  ・。・ﾌﾟｼｭｰ㌨？・・・。      |
 ----------------------------------*
 ******************************************/
 
 /* 色、模様、サイズ、調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 h1 {color: #7fffd4;}
 //h2 {color: #ffffff;}
@@ -248,7 +248,7 @@ section {
 }
 
 /* SHOW調整部 
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .show {
   height: 100vh;
@@ -370,7 +370,7 @@ section {
 }
 
 /* ヘッダー調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .header {
   position: fixed;
@@ -386,7 +386,7 @@ section {
 }
 
 /* ヘッダー上のナビゲーション調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .header_nav {
   padding: 0 20px;
@@ -399,7 +399,7 @@ section {
 
 
 /* ヘッダーロゴ調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .header_logo {
   width: 100px;
@@ -413,7 +413,7 @@ section {
 }
 
 /* メイン調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .main {
   //margin-top: 0px;
@@ -431,7 +431,7 @@ section {
 }
 
 /* フッター調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .footer {
   //margin-left: 150px;
@@ -445,7 +445,7 @@ section {
 }
 
 /* 親要素周りの余白
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .main_yohaku {
   margin-left: 10%;
@@ -457,7 +457,7 @@ section {
 }
 
 /* sm tb版 画像AUTOリサイズ
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .img-rs_syou {
   width: 13vw;
@@ -480,7 +480,7 @@ section {
 }
 
 /* プロフィール調整部 
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .profile {
   background-color: #0059b3;
@@ -491,7 +491,7 @@ section {
 }
 
 /* フォーム調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .form-2 {
   padding: 10px;
@@ -527,7 +527,7 @@ textarea {
 }
 
 /* サービス調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .service_yokoori {
   display: flex;
@@ -572,7 +572,7 @@ textarea {
 }
 
 /* ブログ調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .blog_yokoori {
   display: flex;
@@ -634,7 +634,7 @@ textarea {
 }
 
 /* Flex box調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .box-1 {
     padding: 8px 19px;
@@ -741,7 +741,7 @@ textarea {
 }
 
 /* フォトボックス調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .photo_box-1 {
   background-color: rgba(255, 255, 255, 0.2);
@@ -749,7 +749,7 @@ textarea {
   border: solid 2px #ff5500;
   border-radius: 5px;
   overflow: hidden;
-  width: 150px;
+  width: 250px;
   height: 150px;
 }
 
@@ -759,7 +759,7 @@ textarea {
   border: solid 2px #b3ffff;
   border-radius: 5px;
   overflow: hidden;
-  width: 150px;
+  width: 250px;
   height: 150px;
 }
 
@@ -768,19 +768,19 @@ textarea {
   margin: 10px;
   border-radius: 10px;
   background-color: #66bbcc;
-  width: 21vw;
+  width: 20vw;
 }
 
 .photo_box_no_dodai-2 {
   padding: 0.5em 1em;
   margin: 10px;
-  border-radius: 10px;
-  background-color: #ff7c4d;
-  width: 21vw;
+  border-radius: 5px;
+  background-color: #ff7d66;
+  width: 20vw;
 }
 
 .photo_box_message {
-  height: 350px;
+  height: 300px;
 }
 
 .photo_box_yokoori {
@@ -789,7 +789,7 @@ textarea {
 }
 
 /* ナビゲーションバー調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 ul {
   display: table;
@@ -822,7 +822,7 @@ ul li:hover {
 }
 
 /* ハンバーガーメニュー隠し調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .menu-btn {
   position: fixed;
@@ -838,7 +838,7 @@ ul li:hover {
 }
 
 /* ハンバーガーメニュー線調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .menu-btn span,
 .menu-btn span:before,
@@ -862,7 +862,7 @@ ul li:hover {
 }
 
 /* ハンバーガーメニュー×ボタン調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 #menu-btn-check:checked ~ .menu-btn span {
   background-color: rgba(255, 255, 255, 0);
@@ -883,19 +883,19 @@ ul li:hover {
 }
 
 /* ハンバーガーメニュー、チェックボックス隠し
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 #menu-btn-check {
   display: none;
 }
 
-/* レスポンシブ化調整部
-----------------------------------------------------*/
+/* sm tb版 レスポンシブ化調整部
+-----------------------------------------------------------------*/
 
-@media only screen and (max-width:750px){
+@media only screen and (max-width:960px){
 
-/* ハンバーガーメニュー、ボタン調整部
-----------------------------------------------------*/
+/* sm tb版 ハンバーガーメニュー、ボタン調整部
+-----------------------------------------------------------------*/
 
 .menu-btn {
   position: fixed;
@@ -912,8 +912,8 @@ ul li:hover {
   overflow: hidden;
 }
 
-/* ハンバーガーメニュー、ナビゲーション調整部
-----------------------------------------------------*/
+/* sm tb版 ハンバーガーメニュー、ナビゲーション調整部
+-----------------------------------------------------------------*/
 
 .menu-content {
   width: 100%;
@@ -962,8 +962,8 @@ ul li:hover {
   top: 16px;
 }
 
-/* 色、模様、サイズ、調整部
-----------------------------------------------------*/
+/* sm tb版 色、模様、サイズ、調整部
+-----------------------------------------------------------------*/
 
 h1 {color: #7fffd4;}
 //h2 {color: #ffffff;}
@@ -975,7 +975,7 @@ td {color: #00ff00;}
 li {color: #FFFFFF;}
 
 /* sm tb版 SHOW調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .show > strong {
   display: none;
@@ -986,7 +986,7 @@ li {color: #FFFFFF;}
 }
 
 /* sm tb版 ナビゲーションバー調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 ul li {
   min-width: 20px;
@@ -998,12 +998,11 @@ ul li a {
   width: 100%;
 }
 
-/* ヘッダー調整部
-----------------------------------------------------*/
+/* sm tb版 ヘッダー調整部
+-----------------------------------------------------------------*/
 
 .header {
   position: fixed;
-  height: 75px;
   top: 5px;
   left: 5px;
   right: 5px;
@@ -1011,11 +1010,10 @@ ul li a {
   box-shadow: 0 5px 20px rgba(100, 255, 255, 0.8);
   border-radius:15px;
   overflow: hidden;
-  z-index: 999;
 }
 
 /* sm tb版 メイン調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .main {
   //margin-top: 7%;
@@ -1027,7 +1025,7 @@ ul li a {
 }
 
 /* sm tb版 フッター調整部
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .footer {
   //margin-left: 5%;
@@ -1038,8 +1036,8 @@ ul li a {
   display: flex;
 }
 
-/* sm tb版 親要素周りの余白
-----------------------------------------------------*/
+/* sm tb版 親要素周りの余白調整部
+-----------------------------------------------------------------*/
 
 .main_yohaku {
   margin-left: 5%;
@@ -1050,15 +1048,15 @@ ul li a {
   margin: auto;
 }
 
-/* プロフィール調整部 
-----------------------------------------------------*/
+/* sm tb版 プロフィール調整部 
+-----------------------------------------------------------------*/
 
 .profile {
   width: 80vw;
 }
 
-/* sm tb版 サービス調整部
-----------------------------------------------------*/
+/* tb版 サービス調整部
+-----------------------------------------------------------------*/
 
 .service_yokoori {
   display: block;
@@ -1071,8 +1069,8 @@ ul li a {
   height: auto;
 }
 
-/* sm tb版 ブログ調整部
-----------------------------------------------------*/
+/* tb版 ブログ調整部
+-----------------------------------------------------------------*/
 
 .blog_yokoori {
   display: block;
@@ -1085,45 +1083,38 @@ ul li a {
   height: auto;
 }
 
-/*  sm tb版 フォトボックス調整部
-----------------------------------------------------*/
+.blog_card_image {
+  width: 100%;
+  height: 450px;
+}
+
+/* tb版 フォトボックス調整部
+-----------------------------------------------------------------*/
 
 .photo_box-1 {
-  background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 5px 20px rgba(225, 255, 255, 0.8);
-  border: solid 2px #fff;
-  border-radius: 5px;
-  overflow: hidden;
-  width: 60vw;
-  height: 30vh;
+  width: 55vw;
+  height: 45vh;
 }
 
 .photo_box-2 {
-  background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 5px 20px rgba(100, 255, 255, 0.8);
-  border: solid 2px #0fffff;
-  border-radius: 5px;
-  overflow: hidden;
-  width: 60vw;
-  height: 30vh;
+  width: 55vw;
+  height: 45vh;
 }
 
 .photo_box_no_dodai-1 {
-  border-radius: 10px;
   margin: 0;
   margin-bottom: 15px;
   width: 80vw;
 }
 
 .photo_box_no_dodai-2 {
-  border-radius: 10px;
   margin: 0;
   margin-bottom: 15px;
   width: 80vw;
 }
 
 /* sm tb版 画像AUTOリサイズ
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .img-rs_syou {
   width: 30vw;
@@ -1141,7 +1132,7 @@ ul li a {
 }
 
 /* sm tb版 フォームAUTOリサイズ
-----------------------------------------------------*/
+-----------------------------------------------------------------*/
 
 .form-table,
 .form-table tbody,
@@ -1149,6 +1140,71 @@ ul li a {
 .form-table th,
 .form-table td {
   display: block;
+}
+
+}
+
+/* sm版 レスポンシブ化調整部
+-----------------------------------------------------------------*/
+
+@media only screen and (max-width:600px){
+
+/* sm版 サービス調整部
+-----------------------------------------------------------------*/
+
+.service_yokoori {
+  display: block;
+  flex-wrap: none;
+}
+
+.service_card {
+  padding: 0 10px;
+  width: 80vw;
+  height: auto;
+}
+
+/* sm版 ブログ調整部
+-----------------------------------------------------------------*/
+
+.blog_yokoori {
+  display: block;
+  flex-wrap: none;
+}
+
+.blog_card {
+  padding: 0 10px;
+  width: 80vw;
+  height: auto;
+}
+
+.blog_card_image {
+  width: 100%;
+  height: 280px;
+}
+
+/* sm版 フォトボックス調整部
+-----------------------------------------------------------------*/
+
+.photo_box-1 {
+  width: 60vw;
+  height: 30vh;
+}
+
+.photo_box-2 {
+  width: 60vw;
+  height: 30vh;
+}
+
+.photo_box_no_dodai-1 {
+  margin: 0;
+  margin-bottom: 15px;
+  width: 80vw;
+}
+
+.photo_box_no_dodai-2 {
+  margin: 0;
+  margin-bottom: 15px;
+  width: 80vw;
 }
 
 }
