--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -251,7 +251,7 @@ section {
 -----------------------------------------------------------------*/
 
 .show {
-  height: 100vh;
+  height: 100svh;
   position: relative;
   overflow: hidden;
 }
