--- a/SystemFolder/CssData/Style-1.css
+++ b/SystemFolder/CssData/Style-1.css
@@ -252,7 +252,7 @@ section {
 
 .show {
   height: 100dvh;
-  width: 100dvw;
+  width: auto;
   position: relative;
   overflow: hidden;
 }
@@ -336,36 +336,24 @@ section {
 }
 
 .show video {
-  /* Make video to at least 100% wide and tall */
-  min-width: 100vw;
-  min-height: 100vh;
-  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
-  width: auto;
-  height: auto;
-  /* Center the video */
+  min-width: 100%;
+  min-height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  /* video filtre */
   filter: blur(8px);
 }
 
 .show img {
-  /* Make image to at least 100% wide and tall */
-  min-width: 100vw;
-  min-height: 100vh;
-  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
-  width: auto;
-  height: auto;
-  /* Center the image */
+  min-width: 100%;
+  min-height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  /* image filtre */
   filter: blur(10px);
 }
 
