--- a/Profile/GateProStyle.css
+++ b/Profile/GateProStyle.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  padding: 5px;
+  padding: 0;
   background-color: rgba(150, 150, 150, 0.2); /* 背景色 */
   border: 1px solid rgba(255, 255, 255, 0.4); /* ボーダー */
   border-right-color: rgba(255, 255, 255, 0.2);
@@ -85,7 +85,7 @@ li {
 .gaiyou {
   background-color: rgba(225,225,225, 0.5);
   display: flex;
-  margin: 0;
+  margin-top: 150px;
   padding: 10px;
 }
 
@@ -121,7 +121,7 @@ a:hover {
 .profile_component {
   background-color: rgba(250,255,255,0.7);
   border-radius: 20px;
-  margin: 10px;
+  margin-top: 150px;
   overflow: hidden;
   display: flex;
   box-shadow: 0 5px 20px rgba(100, 255, 255, 0.8);
@@ -143,6 +143,7 @@ a:hover {
 .profile_component {
   width: auto;
   border-radius: 15px;
+  margin: 50px;
 }
 
 .gaiyou {
